modification de tout le visuel

--- a/index.html
+++ b/index.html
@@ -2,31 +2,53 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>SCP Foundation | Roleplay</title>
+    <title>ARQUE | Roleplay</title>
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
 </head>
+
+<nav>
+    <div class="nav-container">
+    <div class="nav-logo">
+    <img src="assets/logo.png" alt="Logo SCP">
+    <span>SCP FOUNDATION</span>
+    </div>
+        <ul class="nav-links">
+            <li><a href="#about">À propos</a></li>
+            <li><a href="#departments">Départements</a></li>
+            <li><a href="#scp">SCP</a></li>
+            <li><a href="#rules">Règlement</a></li>
+            <li><a href="#recruitment">Recrutement</a></li>
+            <li><a href="#contact">Discord</a></li>
+        </ul>
+    </div>
+</nav>
+
 <body>
 
 <header>
-    <h1>SCP FOUNDATION</h1>
+    <h1>COMPLEXE | ARQUE</h1>
     <p class="subtitle">Sécuriser • Contenir • Protéger</p>
     <div class="buttons">
-        <a href="#" class="btn">Rejoindre le Discord</a>
-        <a href="#" class="btn secondary">Jouer sur Roblox</a>
+        <a href="https://discord.gg/cFWKznmpB4" class="btn" target="_blank">
+    Rejoindre le Discord
+    </a>
+    <a href="https://www.roblox.com/games/5041144419" class="btn secondary" target="_blank">
+    Jouer sur Roblox
+    </a>
     </div>
 </header>
 
-<section>
+<section id="about">
     <h2>À propos du serveur</h2>
     <p>
-        Bienvenue sur le serveur SCP Foundation Roleplay.
+        Bienvenue sur le serveur ARQUE Roleplay.
         Notre objectif est de proposer une expérience RP sérieuse,
-        immersive et fidèle à l’univers de la Fondation SCP sur Roblox.
+        immersive et fidèle à l’univers de la Fondation SCP sur le jeu Roblox.
     </p>
 </section>
 
-<section>
+<section id="departement">
     <h2>Départements</h2>
     <ul>
         <li>Classe-D</li>
@@ -38,7 +60,7 @@
     </ul>
 </section>
 
-<section>
+<section id="scp">
     <h2>SCP</h2>
     <p>
         Le site contient plusieurs entités SCP classées Safe, Euclid et Keter,
@@ -46,7 +68,7 @@
     </p>
 </section>
 
-<section>
+<section id="rules">
     <h2>Règlement</h2>
     <p>
         Le respect du règlement est obligatoire sur le serveur Discord
@@ -54,7 +76,7 @@
     </p>
 </section>
 
-<section>
+<section id="recruitement">
     <h2>Recrutement</h2>
     <p>
         Nous recrutons régulièrement des membres motivés.
@@ -63,7 +85,7 @@
 </section>
 
 <footer>
-    <p>© SCP Foundation Roleplay — Accès restreint</p>
+    <p>©COMPLEXE ARQUE — Accès restreint</p>
 </footer>
 
 </body>
