--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <nav>
     <div class="nav-container">
     <div class="nav-logo">
-    <img src="assets/logo.png" alt="Logo SCP">
-    <span>SCP FOUNDATION</span>
+    <img src="assets/logo.png" alt="Logo ARQUE">
+    <span>COMPLEXE ARQUE</span>
     </div>
         <ul class="nav-links">
             <li><a href="#about">À propos</a></li>
