Ajout d'un formulaire de recrutement Mise a jour du style de l'ensemble du site Amelioration de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="#departments">Départements</a></li>
             <li><a href="#scp">SCP</a></li>
             <li><a href="#rules">Règlement</a></li>
-            <li><a href="#recruitment">Recrutement</a></li>
+            <li><a href="recrutement.html">Recrutement</a></li>
             <li><a href="#contact">Discord</a></li>
         </ul>
     </div>
@@ -80,7 +80,7 @@
     <h2>Recrutement</h2>
     <p>
         Nous recrutons régulièrement des membres motivés.
-        Rejoignez le Discord pour déposer votre candidature.
+        Rejoignez le Discord principale de la fondation ARQUEpour déposer votre candidature.
     </p>
 </section>
 
