Amélioration de la navigation mobile

--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
 
 <nav>
     <div class="nav-container">
-    <div class="nav-logo">
-    <img src="assets/logo.png" alt="Logo ARQUE">
-    <span>COMPLEXE ARQUE</span>
-    </div>
-        <ul class="nav-links">
+        <div class="nav-logo">
+            <img src="assets/logo.png" alt="Logo SCP">
+            <span>SCP FOUNDATION</span>
+        </div>
+
+        <button class="nav-toggle" onclick="toggleMenu()">☰</button>
+
+        <ul class="nav-links" id="navLinks">
+            <li><a href="index.html">Accueil</a></li>
             <li><a href="#about">À propos</a></li>
             <li><a href="#departments">Départements</a></li>
             <li><a href="#scp">SCP</a></li>
-            <li><a href="#rules">Règlement</a></li>
             <li><a href="recrutement.html">Recrutement</a></li>
-            <li><a href="#contact">Discord</a></li>
         </ul>
     </div>
 </nav>
