--- a/recrutement.html
+++ b/recrutement.html
@@ -13,11 +13,15 @@
             <img src="assets/logo.png" alt="Logo SCP">
             <span>SCP FOUNDATION</span>
         </div>
-        <ul class="nav-links">
+
+        <button class="nav-toggle" onclick="toggleMenu()">☰</button>
+
+        <ul class="nav-links" id="navLinks">
             <li><a href="index.html">Accueil</a></li>
-            <li><a href="#conditions">Conditions</a></li>
+            <li><a href="#about">À propos</a></li>
             <li><a href="#departments">Départements</a></li>
-            <li><a href="#apply">Candidature</a></li>
+            <li><a href="#scp">SCP</a></li>
+            <li><a href="recrutement.html">Recrutement</a></li>
         </ul>
     </div>
 </nav>
