--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li><a href="#about">À propos</a></li>
             <li><a href="#departments">Départements</a></li>
             <li><a href="#scp">SCP</a></li>
+            <li><a href="scp.html">Liste des SCP</a></li>
             <li><a href="recrutement.html">Recrutement</a></li>
         </ul>
     </div>
