Ajouts de toutes les cartes SCP et correction des titres de la page scp-2550.html en scp-2950.html.

--- a/scp.html
+++ b/scp.html
@@ -32,7 +32,7 @@
 
 <section class="scp-grid">
 
-    <!-- EUCLIDE -->
+    
     <a href="scp-173.html" target="_blank" class="scp-link">
     <div class="scp-card euclide">
         <span class="scp-class">EUCLIDE</span>
@@ -54,6 +54,7 @@
     </div>
 </a>
 
+   <a href="scp-049.html" target="_blank" class="scp-link">
     <div class="scp-card euclide">
         <span class="scp-class">EUCLIDE</span>
         <h3>SCP-049</h3>
@@ -62,7 +63,9 @@
             son toucher provoquant une mort instantanée.
         </p>
     </div>
+</a>
 
+   <a href="scp-1025.html" target="_blank" class="scp-link"> 
     <div class="scp-card euclide">
         <span class="scp-class">EUCLIDE</span>
         <h3>SCP-1025</h3>
@@ -71,7 +74,9 @@
             correspondant aux maladies décrites.
         </p>
     </div>
+</a>
 
+   <a href="scp-008.html" target="_blank" class="scp-link"> 
     <div class="scp-card euclide">
         <span class="scp-class">EUCLIDE</span>
         <h3>SCP-008</h3>
@@ -80,7 +85,9 @@
             et une agressivité incontrôlée chez les sujets infectés.
         </p>
     </div>
+</a>
 
+   <a href="scp-002.html" target="_blank" class="scp-link"> 
     <div class="scp-card euclide">
         <span class="scp-class">EUCLIDE</span>
         <h3>SCP-002</h3>
@@ -89,7 +96,9 @@
             et assimilant toute personne entrant en contact prolongé.
         </p>
     </div>
+</a>
 
+   <a href="scp-1299.html" target="_blank" class="scp-link"> 
     <div class="scp-card euclide">
         <span class="scp-class">EUCLIDE</span>
         <h3>SCP-1299</h3>
@@ -98,7 +107,9 @@
             mais provoquant des comportements dangereux à long terme.
         </p>
     </div>
+</a>
 
+   <a href="scp-966.html" target="_blank" class="scp-link"> 
     <div class="scp-card euclide">
         <span class="scp-class">EUCLIDE</span>
         <h3>SCP-966</h3>
@@ -107,7 +118,9 @@
             provoquant une insomnie sévère et potentiellement mortelle.
         </p>
     </div>
+</a>
 
+    <a href="scp-066.html" target="_blank" class="scp-link">
     <div class="scp-card euclide">
         <span class="scp-class">EUCLIDE</span>
         <h3>SCP-066</h3>
@@ -116,7 +129,9 @@
             de provoquer des blessures internes.
         </p>
     </div>
+</a>
 
+    <a href="scp-075.html" target="_blank" class="scp-link">
     <div class="scp-card euclide">
         <span class="scp-class">EUCLIDE</span>
         <h3>SCP-075</h3>
@@ -125,7 +140,9 @@
             ainsi que ses capacités physiques.
         </p>
     </div>
+</a>
 
+    <a href="scp-023.html" target="_blank" class="scp-link">
     <div class="scp-card euclide">
         <span class="scp-class">EUCLIDE</span>
         <h3>SCP-023</h3>
@@ -134,8 +151,10 @@
             affectant les proches de toute personne l’observant.
         </p>
     </div>
+</a>
 
     <!-- SÛR -->
+    <a href="scp-999.html" target="_blank" class="scp-link"> 
     <div class="scp-card secur">
         <span class="scp-class">SÛR</span>
         <h3>SCP-999</h3>
@@ -144,7 +163,9 @@
             et réduisant le stress chez le personnel.
         </p>
     </div>
+</a>
 
+    <a href="scp-131.html" target="_blank" class="scp-link">
     <div class="scp-card secur">
         <span class="scp-class">SÛR</span>
         <h3>SCP-131</h3>
@@ -153,7 +174,9 @@
             un contact visuel constant avec d’autres SCP.
         </p>
     </div>
+</a>
 
+    <a href="scp-316.html" target="_blank" class="scp-link">
     <div class="scp-card secur">
         <span class="scp-class">SÛR</span>
         <h3>SCP-316</h3>
@@ -162,17 +185,21 @@
             et analytiques améliorées.
         </p>
     </div>
+</a>
 
+    <a href="scp-2950.html" target="_blank" class="scp-link">
     <div class="scp-card secur">
         <span class="scp-class">SÛR</span>
-        <h3>SCP-2550</h3>
+        <h3>SCP-2950</h3>
         <p>
-            Substance anormale aux effets instables pouvant modifier temporairement
-            la matière ou le comportement humain.
+            Chaise pliante anormale, provoquant une sensation de confort et
+            de relaxation extrêmes chez toute personne s’y asseyant.
         </p>
     </div>
+</a>
 
     <!-- KETER -->
+    <a href="scp-106.html" target="_blank" class="scp-link">
     <div class="scp-card keter">
         <span class="scp-class">KETER</span>
         <h3>SCP-106</h3>
@@ -181,7 +208,9 @@
             et de créer des dimensions de poche.
         </p>
     </div>
+</a>
 
+    <a href="scp-682.html" target="_blank" class="scp-link">
     <div class="scp-card keter">
         <span class="scp-class">KETER</span>
         <h3>SCP-682</h3>
@@ -190,7 +219,9 @@
             hostile envers toute forme de vie.
         </p>
     </div>
+</a>
 
+    <a href="scp-299.html" target="_blank" class="scp-link">
     <div class="scp-card keter">
         <span class="scp-class">KETER</span>
         <h3>SCP-299</h3>
@@ -199,7 +230,9 @@
             et des événements imprévisibles.
         </p>
     </div>
+</a>
 
+    <a href="scp-409.html" target="_blank" class="scp-link">
     <div class="scp-card keter">
         <span class="scp-class">KETER</span>
         <h3>SCP-409</h3>
@@ -208,7 +241,9 @@
             en structure cristalline instable.
         </p>
     </div>
+</a>
 
+    <a href="scp-457.html" target="_blank" class="scp-link">
     <div class="scp-card keter">
         <span class="scp-class">KETER</span>
         <h3>SCP-457</h3>
@@ -217,6 +252,7 @@
             au contact de toute source de chaleur.
         </p>
     </div>
+</a>
 
 </section>
 
