Ajout de toutes les images des SCP

--- a/scp.html
+++ b/scp.html
@@ -131,13 +131,12 @@
     </div>
 </a>
 
-    <a href="scp-075.html" target="_blank" class="scp-link">
+    <a href="scp-079.html" target="_blank" class="scp-link">
     <div class="scp-card euclide">
         <span class="scp-class">EUCLIDE</span>
-        <h3>SCP-075</h3>
+        <h3>SCP-079</h3>
         <p>
-            Parasite contrôlant son hôte humain et augmentant son agressivité
-            ainsi que ses capacités physiques.
+            Intelligence artificielle consciente hébergée sur un ordinateur obsolète.
         </p>
     </div>
 </a>
