ajout de nouveaux fichiers

--- a/scp.html
+++ b/scp.html
@@ -30,6 +30,12 @@
     <p class="subtitle">Accès restreint — Consultation autorisée</p>
 </header>
 
+<div class="scp-filters">
+    <button onclick="filterSCP('all')">Tous</button>
+    <button onclick="filterSCP('secur')">SÛR</button>
+    <button onclick="filterSCP('euclide')">EUCLIDE</button>
+    <button onclick="filterSCP('keter')">KETER</button>
+</div>
 <section class="scp-grid">
 
     
