Modification des emplacements des fichiers SCP

--- a/scp.html
+++ b/scp.html
@@ -30,16 +30,10 @@
     <p class="subtitle">Accès restreint — Consultation autorisée</p>
 </header>
 
-<div class="scp-filters">
-    <button onclick="filterSCP('all')">Tous</button>
-    <button onclick="filterSCP('secur')">SÛR</button>
-    <button onclick="filterSCP('euclide')">EUCLIDE</button>
-    <button onclick="filterSCP('keter')">KETER</button>
-</div>
 <section class="scp-grid">
 
-    
-    <a href="scp-173.html" target="_blank" class="scp-link">
+    <!-- EUCLIDE -->    
+    <a href="scp/scp-173.html" target="_blank" class="scp-link">
     <div class="scp-card euclide">
         <span class="scp-class">EUCLIDE</span>
         <h3>SCP-173</h3>
@@ -49,7 +43,7 @@
     </div>
 </a>
 
-    <a href="scp-096.html" taregt="_blank" cmlass="scp-link">
+    <a href="scp/scp-096.html" taregt="_blank" cmlass="scp-link">
     <div class="scp-card euclide">
         <span class="scp-class">EUCLIDE</span>
         <h3>SCP-096</h3>
@@ -60,7 +54,7 @@
     </div>
 </a>
 
-   <a href="scp-049.html" target="_blank" class="scp-link">
+   <a href="scp/scp-049.html" target="_blank" class="scp-link">
     <div class="scp-card euclide">
         <span class="scp-class">EUCLIDE</span>
         <h3>SCP-049</h3>
@@ -71,7 +65,7 @@
     </div>
 </a>
 
-   <a href="scp-1025.html" target="_blank" class="scp-link"> 
+   <a href="scp/scp-1025.html" target="_blank" class="scp-link"> 
     <div class="scp-card euclide">
         <span class="scp-class">EUCLIDE</span>
         <h3>SCP-1025</h3>
@@ -82,18 +76,18 @@
     </div>
 </a>
 
-   <a href="scp-008.html" target="_blank" class="scp-link"> 
+   <a href="scp/scp-008.html" target="_blank" class="scp-link"> 
     <div class="scp-card euclide">
         <span class="scp-class">EUCLIDE</span>
         <h3>SCP-008</h3>
         <p>
-            Prion extrêmement contagieux provoquant une infection nécrotique
+            Virus extrêmement contagieux provoquant une infection nécrotique
             et une agressivité incontrôlée chez les sujets infectés.
         </p>
     </div>
 </a>
 
-   <a href="scp-002.html" target="_blank" class="scp-link"> 
+   <a href="scp/scp-002.html" target="_blank" class="scp-link"> 
     <div class="scp-card euclide">
         <span class="scp-class">EUCLIDE</span>
         <h3>SCP-002</h3>
@@ -104,7 +98,7 @@
     </div>
 </a>
 
-   <a href="scp-1299.html" target="_blank" class="scp-link"> 
+   <a href="scp/scp-1299.html" target="_blank" class="scp-link"> 
     <div class="scp-card euclide">
         <span class="scp-class">EUCLIDE</span>
         <h3>SCP-1299</h3>
@@ -115,7 +109,7 @@
     </div>
 </a>
 
-   <a href="scp-966.html" target="_blank" class="scp-link"> 
+   <a href="scp/scp-966.html" target="_blank" class="scp-link"> 
     <div class="scp-card euclide">
         <span class="scp-class">EUCLIDE</span>
         <h3>SCP-966</h3>
@@ -126,7 +120,7 @@
     </div>
 </a>
 
-    <a href="scp-066.html" target="_blank" class="scp-link">
+    <a href="scp/scp-066.html" target="_blank" class="scp-link">
     <div class="scp-card euclide">
         <span class="scp-class">EUCLIDE</span>
         <h3>SCP-066</h3>
@@ -137,7 +131,7 @@
     </div>
 </a>
 
-    <a href="scp-079.html" target="_blank" class="scp-link">
+    <a href="scp/scp-079.html" target="_blank" class="scp-link">
     <div class="scp-card euclide">
         <span class="scp-class">EUCLIDE</span>
         <h3>SCP-079</h3>
@@ -147,7 +141,7 @@
     </div>
 </a>
 
-    <a href="scp-023.html" target="_blank" class="scp-link">
+    <a href="scp/scp-023.html" target="_blank" class="scp-link">
     <div class="scp-card euclide">
         <span class="scp-class">EUCLIDE</span>
         <h3>SCP-023</h3>
@@ -159,7 +153,7 @@
 </a>
 
     <!-- SÛR -->
-    <a href="scp-999.html" target="_blank" class="scp-link"> 
+    <a href="scp/scp-999.html" target="_blank" class="scp-link"> 
     <div class="scp-card secur">
         <span class="scp-class">SÛR</span>
         <h3>SCP-999</h3>
@@ -170,7 +164,7 @@
     </div>
 </a>
 
-    <a href="scp-131.html" target="_blank" class="scp-link">
+    <a href="scp/scp-131.html" target="_blank" class="scp-link">
     <div class="scp-card secur">
         <span class="scp-class">SÛR</span>
         <h3>SCP-131</h3>
@@ -181,7 +175,7 @@
     </div>
 </a>
 
-    <a href="scp-316.html" target="_blank" class="scp-link">
+    <a href="scp/scp-316.html" target="_blank" class="scp-link">
     <div class="scp-card secur">
         <span class="scp-class">SÛR</span>
         <h3>SCP-316</h3>
@@ -192,7 +186,7 @@
     </div>
 </a>
 
-    <a href="scp-2950.html" target="_blank" class="scp-link">
+    <a href="scp/scp-2950.html" target="_blank" class="scp-link">
     <div class="scp-card secur">
         <span class="scp-class">SÛR</span>
         <h3>SCP-2950</h3>
@@ -204,7 +198,7 @@
 </a>
 
     <!-- KETER -->
-    <a href="scp-106.html" target="_blank" class="scp-link">
+    <a href="scp/scp-106.html" target="_blank" class="scp-link">
     <div class="scp-card keter">
         <span class="scp-class">KETER</span>
         <h3>SCP-106</h3>
@@ -215,7 +209,7 @@
     </div>
 </a>
 
-    <a href="scp-682.html" target="_blank" class="scp-link">
+    <a href="scp/scp-682.html" target="_blank" class="scp-link">
     <div class="scp-card keter">
         <span class="scp-class">KETER</span>
         <h3>SCP-682</h3>
@@ -226,7 +220,7 @@
     </div>
 </a>
 
-    <a href="scp-299.html" target="_blank" class="scp-link">
+    <a href="scp/scp-299.html" target="_blank" class="scp-link">
     <div class="scp-card keter">
         <span class="scp-class">KETER</span>
         <h3>SCP-299</h3>
@@ -237,7 +231,7 @@
     </div>
 </a>
 
-    <a href="scp-409.html" target="_blank" class="scp-link">
+    <a href="scp/scp-409.html" target="_blank" class="scp-link">
     <div class="scp-card keter">
         <span class="scp-class">KETER</span>
         <h3>SCP-409</h3>
@@ -248,7 +242,7 @@
     </div>
 </a>
 
-    <a href="scp-457.html" target="_blank" class="scp-link">
+    <a href="scp/scp-457.html" target="_blank" class="scp-link">
     <div class="scp-card keter">
         <span class="scp-class">KETER</span>
         <h3>SCP-457</h3>
