--- a/scp/scp-008.html
+++ b/scp/scp-008.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <title>SCP-008 — Dossier SCP</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
 <nav>
     <div class="nav-container">
         <div class="nav-logo">
-            <img src="assets/logo.png" alt="Logo SCP">
+            <img src="../assets/logo.png" alt="Logo SCP">
             <span>SCP FOUNDATION</span>
         </div>
 
         <ul class="nav-links">
-            <li><a href="scp.html">← Retour aux SCP</a></li>
+            <li><a href="../scp.html">← Retour aux SCP</a></li>
         </ul>
     </div>
 </nav>
