--- a/scp/scp-002.html
+++ b/scp/scp-002.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <title>SCP-002 — Dossier SCP</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
 <nav>
     <div class="nav-container">
         <div class="nav-logo">
-            <img src="assets/logo.png" alt="Logo SCP">
+            <img src="../assets/logo.png" alt="Logo SCP">
             <span>SCP FOUNDATION</span>
         </div>
 
@@ -28,7 +28,7 @@
 
 <section class="scp-detail">
 
-    <img src="assets/scp-002.jpg" alt="SCP-002" class="scp-image">
+    <img src="../assets/scp-002.jpg" alt="SCP-002" class="scp-image">
 
     <h2>Description</h2>
     <p>
