--- a/scp/scp-173.html
+++ b/scp/scp-173.html
@@ -2,42 +2,44 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>SCP-096 — Dossier SCP</title>
+    <title>SCP-173 — Dossier SCP</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
 <nav>
     <div class="nav-container">
         <div class="nav-logo">
-            <img src="assets/logo.png" alt="Logo SCP">
+            <img src="../assets/logo.png" alt="Logo SCP">
             <span>SCP FOUNDATION</span>
         </div>
 
         <ul class="nav-links">
-            <li><a href="scp.html">← Retour aux SCP</a></li>
+            <li><a href="../scp.html">← Retour aux SCP</a></li>
         </ul>
     </div>
 </nav>
 
 <header>
-    <h1>SCP-096</h1>
+    <h1>SCP-173</h1>
     <p class="subtitle">Classe : EUCLIDE</p>
 </header>
 
 <section class="scp-detail">
 
-    <img src="assets/scp-096.jpg" alt="SCP-096" class="scp-image">
+    <img src="../assets/scp-173.jpg" alt="SCP-173" class="scp-image">
 
     <h2>Description</h2>
     <p>
-        SCP-096 est une entité humaine qui se manifeste lorsqu'elle est observée. Elle est extrêmement hostile et tue quiconque la regarde directement.
+        SCP-173 est une statue animée composée de béton et de barres d’armature.
+        L’entité est extrêmement hostile et se déplace uniquement lorsqu’elle
+        n’est pas observée.
     </p>
 
     <h2>Procédures de confinement</h2>
     <p>
-        SCP-096 doit être confiné dans une cellule insonorisée.
+        SCP-173 doit être confiné dans une cellule scellée.  
         Un contact visuel permanent est requis lors de toute intervention.
         Le personnel doit entrer en groupe de trois minimum et annoncer
         clairement tout clignement d’yeux.
@@ -46,7 +48,7 @@
 </section>
 
 <footer>
-    <p>© Fondation SCP — Dossier SCP-096</p>
+    <p>© Fondation SCP — Dossier SCP-173</p>
 </footer>
 
 </body>
