--- a/scp/scp-409.html
+++ b/scp/scp-409.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>SCP-409 — Dossier SCP</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
@@ -16,7 +16,7 @@
         </div>
 
         <ul class="nav-links">
-            <li><a href="scp.html">← Retour aux SCP</a></li>
+            <li><a href="../scp.html">← Retour aux SCP</a></li>
         </ul>
     </div>
 </nav>
@@ -28,7 +28,7 @@
 
 <section class="scp-detail">
 
-    <img src="assets/scp-409.jpg" alt="SCP-409" class="scp-image">
+    <img src="../assets/scp-409.jpg" alt="SCP-409" class="scp-image">
 
     <h2>Description</h2>
     <p>
