--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li><a href="index.html">Accueil</a></li>
             <li><a href="#about">À propos</a></li>
             <li><a href="#departments">Départements</a></li>
+            <li><a href="equipes.html">Équipes</a></li>
             <li><a href="#scp">SCP</a></li>
             <li><a href="scp.html">Liste des SCP</a></li>
             <li><a href="recrutement.html">Recrutement</a></li>
