réglage image qui charge pas

--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
 <section id="about">
     <h2>À propos du serveur</h2>
     <p>
-        Bienvenue sur le serveur ARQUE Roleplay.
-        Notre objectif est de proposer une expérience RP sérieuse,
-        immersive et fidèle à l’univers de la Fondation SCP sur le jeu Roblox.
+        Le Complexe Arque est un serveur est en Semi-Serious ! Nous aimons être dans le Fun tant que le RolePlay est respecté ! Nous avons et nous sommes fiers d'avoir une communauté fidèle et active et accueillante !
     </p>
 </section>
 
