ajouts de modif

--- a/index.html
+++ b/index.html
@@ -50,6 +50,18 @@
     </p>
 </section>
 
+<section id="evenements">
+    <h2>Événements à venir</h2>
+
+    <p class="no-event">
+        AUCUN ÉVÉNEMENT PRÉVU POUR L'INSTANT
+    </p>
+
+    <div class="coming-soon">
+        <img src="assets/coming-soon.jpg" alt="Coming Soon">
+    </div>
+</section>
+
 <section id="departement">
     <h2>Départements</h2>
     <ul>
@@ -88,6 +100,8 @@
 
 <footer>
     <p>©COMPLEXE ARQUE — Accès restreint</p>
+    <p>Site développé par l'équipe de développement ARQUE</p>
+    <p>Directeur de project Mathieux/t.exe</p>
 </footer>
 
 </body>
