--- a/scp/scp-049.html
+++ b/scp/scp-049.html
@@ -28,7 +28,7 @@
 
 <section class="scp-detail">
 
-    <img src="../assets/scp-049.jpg" alt="SCP-049" class="scp-image">
+    <img src="/assets/scp-049.jpg" alt="SCP-049" class="scp-image">
 
     <h2>Description</h2>
     <p>
