--- a/scp/scp-008.html
+++ b/scp/scp-008.html
@@ -28,7 +28,7 @@
 
 <section class="scp-detail">
 
-    <img src="assets/scp-008.jpg" alt="SCP-008" class="scp-image">
+    <img src="../assets/scp-008.jpg" alt="SCP-008" class="scp-image">
 
     <h2>Description</h2>
     <p>
