--- a/equipes.html
+++ b/equipes.html
@@ -32,6 +32,14 @@
     </div>
 
     <div class="team-card">
+        <h3>Médic</h3>
+        <p>Département Médicale.</p>
+        <a href="https://discord.gg/rdwmJ29AHw" target="_blank" class="btn">
+            Rejoindre le Discord
+        </a>
+    </div>
+
+    <div class="team-card">
         <h3>Scientifiques</h3>
         <p>Responsables de l'étude et du confinement des SCP.</p>
         <a href="https://discord.gg/JnZkVKVH2z" target="_blank" class="btn">
@@ -43,6 +51,30 @@
         <h3>DSI</h3>
         <p>Département de la sécurité internes.</p>
         <a href="https://discord.gg/mm8RzjTKvQ" target="_blank" class="btn">
+            Rejoindre le Discord
+        </a>
+    </div>
+
+    <div class="team-card">
+        <h3>FIM</h3>
+        <p>Force d'intervention mobile</p>
+        <a href="https://discord.gg/9VFnntRVk7" target="_blank" class="btn">
+            Rejoindre le Discord
+        </a>
+    </div>
+
+    <div class="team-card">
+        <h3>Département d'éthique</h3>
+        <p>Comité D'éthique.</p>
+        <a href="https://discord.gg/FpKhze5hxA" target="_blank" class="btn">
+            Rejoindre le Discord
+        </a>
+    </div>
+
+    <div class="team-card">
+        <h3>REDACTED</h3>
+        <p>Insurrection du Chaos</p>
+        <a href="https://discord.gg/rdwmJ29AHw" target="_blank" class="btn">
             Rejoindre le Discord
         </a>
     </div>
