--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         <ul class="nav-links" id="navLinks">
             <li><a href="index.html">Accueil</a></li>
             <li><a href="#about">À propos</a></li>
-            <li><a href="#departments">Départements</a></li>
             <li><a href="equipes.html">Équipes</a></li>
             <li><a href="#scp">SCP</a></li>
             <li><a href="scp.html">Liste des SCP</a></li>
@@ -69,8 +68,11 @@
         <li>Sécurité</li>
         <li>Scientifiques</li>
         <li>Médecins</li>
-        <li>Forces d’intervention (MTF)</li>
-        <li>Administration</li>
+        <li>Département de la justice interne</li>
+        <li>Insurrection du Chaos (CSI)</li>
+        <li>Force d'intervention mobile</li>
+        <li>DSI</li>
+        <li>Département Administration</li>
     </ul>
 </section>
 
