--- a/equipes.html
+++ b/equipes.html
@@ -3,6 +3,7 @@
     <title>Équipes — Fondation SCP</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <section class="teams">
