--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>ARQUE | Roleplay</title>
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <nav>
