--- a/equipes.html
+++ b/equipes.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="team-card">
-        <h3>Médic</h3>
+        <h3>Médecins</h3>
         <p>Département Médicale.</p>
         <a href="https://discord.gg/rdwmJ29AHw" target="_blank" class="btn">
             Rejoindre le Discord
