--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <footer>
     <p>©COMPLEXE ARQUE — Accès restreint</p>
     <p>Site développé par l'équipe de développement ARQUE</p>
-    <p>Directeur de project Mathieux/t.exe</p>
+    <p>Directeur de projet Mathieux/t.exe</p>
 </footer>
 
 </body>
