--- a/update.html
+++ b/update.html
@@ -84,8 +84,8 @@
 /* ======================
    CONFIG
 ====================== */
-const ADMIN_PASSWORD = "MATHIEUX5450";
-const WEBHOOK_URL = "https://discord.com/api/webhooks/1464659523821371505/jcTCFtx7XdldCpoFvpmcUwfwl_LV1kUHIk42Io-7jl_ZRKF3ZYV-ucG-RFayJDuSL2lE";
+const ADMIN_PASSWORD = "mathieux";
+const WEBHOOK_URL = "https://discord.com/api/webhooks/1455909698447474699/JrrOZirIKIwC7Q9xgWKwNmXI-wEx_AqsAXFt6khflR3rwM9DQB4h_pBLvmQLXGLqorUm";
 const SITE_URL = "https://scp-rp.vercel.app/";
 
 /* ======================
